hotfix:name_context

--- a/Obesity Risk/Obesity_predictionV2.ipynb
+++ b/Obesity Risk/Obesity_predictionV2.ipynb
@@ -1418,7 +1418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "VAMOS A REALIZAR VARIAS PREDICCIONES CON 3 ALGORITMOS"
+    "VAMOS A REALIZAR VARIAS PREDICCIONES ALGORITMO XGBOOST"
    ]
   },
   {
